--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <Button
-        android:id="@+id/startVoiceChatButton"
-        android:layout_width="wrap_content"
+    <RadioGroup
+        android:id="@+id/modeSelection"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start Voice Chat" />
+        android:orientation="vertical">
+
+        <RadioButton
+            android:id="@+id/offlineMode"
+            android:text="Offline Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/tunnelMode"
+            android:text="Tunnel Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/pluginMode"
+            android:text="Plugin Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/onlineMode"
+            android:text="Online Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RadioButton
+            android:id="@+id/vpnMode"
+            android:text="VPN Mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RadioGroup>
 </LinearLayout>
