--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,6 +126,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="10dp"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-2273884404590175/8293148940" />
+        ads:adUnitId="ca-app-pub-2273884404590175~8177598870" />
 
 </LinearLayout>
