--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:title="Voice Chat App"
-    android:background="?attr/colorPrimary"/>
-
+    android:background="?attr/colorPrimary"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     <!-- Title/Text -->
     <TextView
         android:id="@+id/title"
