--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -202,7 +202,7 @@
 
     <!-- Banner Ad (optional, at bottom) -->
     <com.google.android.gms.ads.AdView
-    android:id="@+id/adView"
+    android:id="@+id/mAdView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     ads:adSize="BANNER"
